--- a/css/style.css
+++ b/css/style.css
@@ -84,16 +84,18 @@ section{
     z-index: 1000;
 }
 
-.header .logo img{
-    height: 6rem;
+.header .logo {
+    color: white;
+    font-size: 2rem;
 }
 
 .header .navbar a{
     margin:0 1rem;
-    font-size: 1.6rem;
+    font-size: 2rem;
     color:#fff;
-
 }
+
+
 
 .header .navbar a:hover{
     color:var(--main-color);
@@ -232,31 +234,31 @@ section{
     color:#eee;
 }
 
-.about .row{
+.idea .row{
     display: flex;
     align-items: center;
     background:var(--black);
     flex-wrap: wrap;
 }
 
-.about .row .image{
+.idea .row .image{
     flex:1 1 45rem;
 }
 
-.about .row .image img{
+.idea .row .image img{
     width: 100%;
 }
-.about .row .content{
+.idea .row .content{
     flex:1 1 45rem;
     padding:2rem;
 }
 
-.about .row .content h3{
+.idea .row .content h3{
     font-size: 3rem;
     color:#fff;
 }
 
-.about .row .content p{
+.idea .row .content p{
     font-size: 1.6rem;
     color:#ccc;
     padding:1rem 0;
@@ -305,19 +307,19 @@ section{
     color:var(--black);
 }
 
-.products .box-container{
+.strategy .box-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     gap:1.5rem;
 }
 
-.products .box-container .box{
+.strategy .box-container .box{
     text-align: center;
     border:var(--border);
     padding: 2rem;
 }
 
-.products .box-container .box .icons a{
+.strategy .box-container .box .icons a{
     height: 5rem;
     width: 5rem;
     line-height: 5rem;
@@ -327,77 +329,110 @@ section{
     margin:.3rem;
 }
 
-.products .box-container .box .icons a:hover{
+.strategy .box-container .box .icons a:hover{
     background:var(--main-color);
 }
 
-.products .box-container .box .image{
+.strategy .box-container .box .image{
     padding: 2.5rem 0;
 }
 
-.products .box-container .box .image img{
+.strategy .box-container .box .image img{
     height: 35rem;
 }
 
-.products .box-container .box .content h3{
+.strategy .box-container .box .content h3{
     color:#fff;
     font-size: 2.5rem;
 }
 
-.products .box-container .box .content .stars{
+.strategy .box-container .box .content .stars{
     padding: 1.5rem;
 }
 
-.products .box-container .box .content .stars i{
+.strategy .box-container .box .content .stars i{
     font-size: 1.7rem;
     color: var(--main-color);
 }
 
-.products .box-container .box .content .price{
+.strategy .box-container .box .content .price{
     color:#fff;
     font-size: 2.5rem;
 }
 
-.products .box-container .box .content .price span{
+.strategy .box-container .box .content .price span{
     text-decoration: line-through;
     font-weight: lighter;
     font-size: 1.5rem;
 }
 
-.review .box-container{
+.copy .row{
+    display: flex;
+    background:var(--black);
+    flex-wrap: wrap;
+    gap:1rem;
+    height: 60rem;
+}
+
+.copy .row .map{
+    flex:1 1 70rem;
+    width: 100%;
+    object-fit: cover;
+}
+
+.copy .row form{
+    flex:1 1 45rem;
+    padding:5rem 2rem;
+    text-align: center;
+}
+
+.copy .row form h3{
+    text-transform: uppercase;
+    font-size: 2rem;
+    color:#fff;
+}
+
+.copy .row .form p{
+    font-size: 1.6rem;
+    color:#ccc;
+    padding:1rem 0;
+    line-height: 1.8;
+}
+
+.partner .box-container{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     gap:1.5rem;
 }
 
-.review .box-container .box{
+.partner .box-container .box{
     border:var(--border);
     text-align: center;
     padding:3rem 2rem;
 }
 
-.review .box-container .box p{
+.partner .box-container .box p{
     font-size: 1.5rem;
     line-height: 1.8;
     color:#ccc;
     padding:2rem 0;
 }
 
-.review .box-container .box .image{
+.partner .box-container .box .image{
     padding: 2.5rem 0;
 }
 
-.review  .box-container .box .image img{
+.partner .box-container .box .image img{
     height: 19rem;
 }
 
-.review .box-container .box h3{
+.partner .box-container .box h3{
     padding:1rem 0;
     font-size: 2rem;
     color:#fff;
 }
 
-.review .box-container .box .stars i{
+.partner .box-container .box .stars i{
     font-size: 1.5rem;
     color:var(--main-color);
 }
